--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,22 @@
 sudo: required
+
+dist: focal
+
 services:
   - docker
 
+before_script:
+  - mkdir -p ~/.docker/cli-plugins
+  - wget -O - https://github.com/docker/buildx/releases/download/v0.5.1/buildx-v0.5.1.linux-amd64 > ~/.docker/cli-plugins/docker-buildx
+  - chmod a+x ~/.docker/cli-plugins/docker-buildx
+  - docker run --rm --privileged docker/binfmt:a7996909642ee92942dcd6cff44b9b95f08dad64
+  - docker buildx create --use --name mybuilder
+
+
 script:
   - echo "Build local image"
-  - docker build -t filebeat .
+  - docker login -u ${DOCKER_USERNAME} -p ${DOCKER_PASSWORD}
+  - docker buildx build --platform linux/amd64,linux/arm64 -t ${DOCKER_USERNAME}/DOCKER-FILEBEAT:latest --push .
   - docker images
   - echo "Run local image"
   - docker run -d --name filebeat filebeat
@@ -15,3 +27,4 @@ script:
   - docker ps -a
   - docker logs nguoianphu-filebeat  
   - docker images
+
