--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ script:
   - docker ps -a
   - docker logs filebeat
   - echo "Testing public image on Docker Hub"
-  - docker run -d --name filebeat subham328/file-beat:1.3
+  - docker run -d --name filebeat-con subham328/file-beat:1.3
   - docker ps -a
-  - docker logs filebeat  
+  - docker logs filebeat-con  
   - docker images
 
